--- a/index.html
+++ b/index.html
@@ -1110,7 +1110,7 @@
     <section id="contato" class="map-section">
         <div class="container">
             <h2 class="section-title">Onde Estamos</h2>
-            <p class="section-subtitle">R. Mário Vital, 168 - Box 69-71 - Eldorado - Contagem - MG</p>
+            <p class="section-subtitle">R. das Mangueiras, 321 - Eldorado, Contagem - MG, 32310-560</p>
             
             <div class="map-container">
             <iframe 
