--- a/index.html
+++ b/index.html
@@ -918,7 +918,7 @@
             <div class="parking-info">
                 <div class="parking-card">
                     <h3>📍 Localização</h3>
-                    <p>Mesmo endereço da Saaddi</p>
+                    <p>R. das Mangueiras, 321 - Eldorado, Contagem - MG, 32310-560</p>
                     <p>Fácil acesso e seguro</p>
                 </div>
                 <div class="parking-card">
